# EmuWorld

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  bootstrap_sources.sh  docker-compose.yml  package-lock.json  start.sh  stop.sh
.letta/: settings.local.json
.playwright-mcp/: page-2026-04-04T02-21-28-066Z.yml  page-2026-04-04T02-21-53-695Z.yml  page-2026-04-04T02-21-55-737Z.yml  page-2026-04-04T02-25-43-058Z.yml  page-2026-04-04T02-25-49-348Z.yml  page-2026-04-04T02-29-57-151Z.yml  page-2026-04-04T02-30-07-457Z.yml
ai-service/: Dockerfile  ai_service_pb2.py  ai_service_pb2_grpc.py  main.py  (+1 more)
backend/: Cargo.toml  Dockerfile  build.rs
backend/data/: emuworld.db
backend/src/: api.rs  application.rs  ingest.rs  main.rs  models.rs  repo.rs
backend/src/api/: anomalies.rs  chat.rs  datasets.rs  errors.rs  events.rs  hypotheses.rs  mod.rs  news.rs  predictions.rs  sources.rs  targets.rs
backend/src/application/: chat_service.rs  mod.rs  prediction_service.rs  scheduler.rs  source_sync_service.rs
backend/src/bootstrap/: app_state.rs
backend/src/db/: mod.rs
backend/src/ingest/: census.rs  eurostat.rs  fred.rs  google_trends.rs  imf.rs  mod.rs  nbs.rs  news.rs  oecd.rs  world_bank.rs  yfinance.rs
backend/src/integrations/: ai_client.rs
backend/src/models/: mod.rs
backend/src/repo/: mod.rs  postgres.rs
backend/src/repo/postgres/: anomalies.rs  chat.rs  datasets.rs  event_dataset_links.rs  events.rs  hypotheses.rs  hypothesis_target_links.rs  migrations.rs  mod.rs  news.rs  predictions.rs  sources.rs  targets.rs
backend/src/repo/sqlite/: mod.rs
(+74 files in other folders)
